--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
+#eclipse file
+*.DS_Store
+
 # Compiled class file
 *.class
-
-# Log file
 *.log
 
 # BlueJ files
@@ -9,6 +10,7 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
 
 # Package Files #
 *.jar
@@ -19,5 +21,52 @@
 *.tar.gz
 *.rar
 
+
+#etc#
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.log
+upload/
+logs/
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.project
+.externalToolBuilders/
+*.launch
+.classpath
+.factorypath
+.buildpath
+.target
+.tern-project
+.springBeans
+.recommenders/
+
+
+
+
+
+
+
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
